# python-project-starter

./: .gitignore  README.md  dev-setup.sh  local.env.example  pyproject.toml  supervisord.conf
.devcontainer/: docker-compose.yml
.devcontainer/dev/: .env  devcontainer.json  docker-compose.yml  dockerfile
.devcontainer/redis/: docker-compose.yml
.devcontainer/redis/data/: dump.rdb
notebooks/: 0-starter.ipynb
src/django_core/: settings.py  urls.py
src/django_module/: apps.py  views.py
src/project/: __init__.py  celery.py  cli.py  logger.py
src/project/processor/: __init__.py  subtraction.py  works.py
src/project/processor_celery/: __init__.py  cli.py  works.py  works_test.py
src/project/web/: __init__.py  router.py
src/project/web/templates/: base.html  index.html
src/python_project_starter/: __init__.py  cli.py
src/python_project_starter/processor/: __init__.py  subtraction.py  subtraction_test.py
